fix langauge in book language list being hidden

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -528,6 +528,18 @@ body > #wrapper {
     background-color: #EEEEEE;
 }
 
+#book_lang_menu > div {
+    color: #444444;
+    text-indent: 8px;
+}
+
+#book_lang_menu:hover,
+#book_lang_menu:hover > div {
+    color: white;
+    background-color: #666666;
+}
+
+
 #search_box {
     background-color: transparent;
     padding: 0;
