--- a/publican/templates/products_menu.tmpl
+++ b/publican/templates/products_menu.tmpl
@@ -1,4 +1,4 @@
-<script>$('<div>'+current_product+'</div>').insertBefore("#product_menu_list")</script>
+<script>$('<div>'+labels[current_product]["label"]+'</div>').insertBefore("#product_menu_list")</script>
 <ul id="product_menu_list" class="hidden">
 [%- FOREACH prod = products %]
   <li><a href="[% host %]/[% lang %]/[% prod %]/index.html">[% labels.${prod}.label %]</a></li>
