--- a/publican/templates/web_2_head.tmpl
+++ b/publican/templates/web_2_head.tmpl
@@ -5,6 +5,7 @@
 <title>[% title %]</title>
 <link rel="stylesheet" href="[% host %]/menu.css" type="text/css" />
 <meta name="generator" content="publican [% publican_version %]" />
+<script type="text/javascript" src="[% host %]/[% lang %]/labels.js"></script>
 <script type="text/javascript" src="[% host %]/toc.js"></script>
 <script type="text/javascript" src="[% host %]/jquery-1.7.1.min.js"></script>
 </head>
