fix js warning on version and menu pages

--- a/publican/templates/books_menu.tmpl
+++ b/publican/templates/books_menu.tmpl
@@ -1,4 +1,10 @@
-<script>$('<div>'+labels[current_product][current_version][current_book]["label"]+'</div>').insertBefore("#book_menu_list")</script>
+<script>
+    if(current_book != 'Books') {
+        $('<div>'+labels[current_product][current_version][current_book]["label"]+'</div>').insertBefore("#book_menu_list");
+    } else {
+        $('<div>[% trans_strings.Books %]</div>').insertBefore("#book_menu_list");
+    }
+</script>
 <ul id="book_menu_list" class="hidden">
 [%- FOREACH book_name = books %]
   <li [% IF lang != book_list.${book_name}.lang %]class="untranslated [% lang %]"[% END %]>
