--- a/publican/templates/versions_menu.tmpl
+++ b/publican/templates/versions_menu.tmpl
@@ -1,4 +1,10 @@
-<script>$('<div>'+labels[current_product][current_version]["label"]+'</div>').insertBefore("#version_menu_list")</script>
+<script>
+    if(current_version != 'Versions') {
+	$('<div>'+labels[current_product][current_version]["label"]+'</div>').insertBefore("#version_menu_list");
+    } else {
+        $('<div>[% trans_strings.Versions %]</div>').insertBefore("#version_menu_list");
+    }
+</script>
 <ul id="version_menu_list" class="hidden">
 [%- FOREACH ver = versions %]
   <li><a href="[% host %]/[% lang %]/[% product %]/[% ver %]/index.html">[% labels.${product}.${ver}.label %]</a></li>
