--- a/publican/templates/books_lang_menu.tmpl
+++ b/publican/templates/books_lang_menu.tmpl
@@ -1,5 +1,5 @@
-<div>[% lang %]</div>
-[%- IF langs %]
+<div>[% lang_name %]</div>
+[%- IF langs.size > 0 %]
 <ul id="book_lang_menu_list" class="hidden">
 [%- FOREACH langs %]
   <li><a href="[% host %]/[% lang %]/[% product %]/[% version %]/[% book %]/index.html">[% lang_name %]</a></li>
