fix path to Common_Content for web html

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -668,9 +668,12 @@ img {
 	max-width: 100%;
 }
 
-.inlinemediaobject, .inlinemediaobject img {
+.inlinemediaobject,
+.inlinemediaobject img,
+.inlinemediaobject object {
 	display:inline;
 	margin:0px;
+	overflow: hidden;
 }
 
 .figure img,
