update for Publican 3.0

--- a/publican-openshift/en-US/css/menu.css
+++ b/publican-openshift/en-US/css/menu.css
@@ -7,17 +7,16 @@ a:visited {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	color:#333333;
+	color:#a70000;
 }
 
 div.producttitle {
-/*	background: #888888 url(../images/h1-bg.png) top left repeat; */
-	color:#888888;
-	font-size:2.0em;
+/*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
+	color:#a70000;
 }
 
 .section h1.title {
-	color:#333333;
+	color:#a70000;
 }
 
 
@@ -27,7 +26,7 @@ table {
 }
 
 table th {
-	background-color:#474747;
+	background-color:#900;
 }
 
 table tr.even td {
@@ -35,13 +34,18 @@ table tr.even td {
 }
 
 .revhistory table th {
-	color:#333333;
+	color:#a70000;
 }
 
 .titlepage .edition {
-	color: #333333;
+	color: #a70000;
 }
 
 span.remark{
 	background-color: #ffff00;
 }
+
+.home{
+    color: #a70000;
+}
+
