--- a/publican/templates/language_index.tmpl
+++ b/publican/templates/language_index.tmpl
@@ -155,7 +155,7 @@ $(document).ready(function() {
 			<div class="bottom_versions [% prod %]-[% ver %]">
 			    [%- FOREACH  c_book = i_sort(cur_ver) %][% booker = book_list.${prod}.${ver}.${c_book} %]
 				<div class="bottom_books[% IF lang != booker.lang %] untranslated [% lang %][% END %]">
-					<a href="[% host %]/[% lang %]/[% prod %]/[% booker.version %]/[% booker.book %]/index.html">[% booker.book_clean %][% IF lang != booker.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]</a>
+					<a href="[% host %]/[% booker.lang %]/[% booker.product %]/[% booker.version %]/html/[% booker.book %]/index.html">[% booker.book_clean %][% IF lang != booker.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]<span class="subtitle">[% booker.subtitle %]</span></a>
 				</div>
 			    [%- END %]
 			</div>
