--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -937,6 +937,7 @@ div.version_tabs {
     background-color: white;
     float: left;
     padding: 40px !important;
+    padding-top: 10px !important;
     min-width: 80%;
 }
 
