update pot files tweak web style

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -59,6 +59,7 @@ body > div.book, body > div.article, body > div.set, body > div.preface, body > 
 }
 .side_products {
     color: #555555;
+    background-color: #F5F5F5;
     float: left;
     padding-top: 20px;
     position: relative;
@@ -105,7 +106,7 @@ body > div.book, body > div.article, body > div.set, body > div.preface, body > 
     z-index: 999;
 }
 .main_content {
-    background-color: #F5F5F5;
+/*    background-color: #F5F5F5; */
     clear: both !important;
     position: relative;
 }
