update Fedora brand for Publican 3.0

--- a/publican-fedora/en-US/css/menu.css
+++ b/publican-fedora/en-US/css/menu.css
@@ -13,7 +13,6 @@ h1,h2,h3,h4,h5,h6 {
 div.producttitle {
 /*	background: #3c6eb4 url(../images/h1-bg.png) top left repeat; */
 	color:#3c6eb4;
-	font-size:2.0em;
 }
 
 .section h1.title {
@@ -45,3 +44,8 @@ table tr.even td {
 span.remark{
 	background-color: #ffff00;
 }
+
+.home{
+    color: #3c6eb4;
+}
+
