--- a/publican/templates/web_2_head.tmpl
+++ b/publican/templates/web_2_head.tmpl
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>[% title %]</title>
 <link rel="stylesheet" href="[% host %]/menu.css" type="text/css" />
+<link rel="stylesheet" href="[% host %]/site_overrides.css" type="text/css" />
 <meta name="generator" content="publican [% publican_version %]" />
 <script type="text/javascript">
     var current_product = "[%- IF product %][% product %][% ELSE %]Products[% END %]";
