witch from simpara to literallayout to avoid issue with trailing special characters tidy up javascript

--- a/publican/templates/books_lang_menu.tmpl
+++ b/publican/templates/books_lang_menu.tmpl
@@ -2,7 +2,7 @@
 [%- IF langs.size > 0 %]
 <ul id="book_lang_menu_list" class="hidden">
 [%- FOREACH langs %]
-  <li><a href="[% host %]/[% lang %]/[% product %]/[% version %]/[% book %]/index.html">[% lang_name %]</a></li>
+  <li><a href="[% host %]/[% lang %]/[% product %]/[% version %]/html/[% book %]/index.html">[% lang_name %]</a></li>
 [%- END %]
 </ul>
 [%- END %]
