tweak css for a bigger hit target

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -748,8 +748,11 @@ div.version_tabs {
     display: block !important;
 /*     height: 32px !important;
     line-height: 32px !important; */
-    padding-top: 3px;
-    padding-bottom: 3px;
+}
+
+.side_products div.link a {
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 .side_products div.link a:after {
     border-width: 16px !important;
