--- a/publican/templates/books_menu.tmpl
+++ b/publican/templates/books_menu.tmpl
@@ -8,7 +8,7 @@
 <ul id="book_menu_list" class="hidden">
 [%- FOREACH book_name = books %]
   <li [% IF lang != book_list.${book_name}.lang %]class="untranslated [% lang %]"[% END %]>
-        <a href="[% host %]/[% lang %]/[% product %]/[% book_list.${book_name}.version %]/html/[% book_list.${book_name}.book %]/index.html">[% book_list.${book_name}.book_clean %][% IF lang != book_list.${book_name}.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]</a>
+        <a href="[% host %]/[% book_list.${book_name}.lang %]/[% product %]/[% book_list.${book_name}.version %]/html/[% book_list.${book_name}.book %]/index.html">[% book_list.${book_name}.book_clean %][% IF lang != book_list.${book_name}.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]</a>
   </li>
 [%- END %]
 </ul>
