Fix epub validation errors

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -497,7 +497,7 @@ h4.editedby {
 	padding-left: 2.6em;
 }
 
-.answer label, .question label {
+.answer .label, .question .label {
 	float:left;
 	font-weight:bold;
 }
